Bug 898728 - Blob should be invalidated when the window is destroyed, r=smaug